mist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rowing-webcam-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  # This is an ExternalName service that points to your Raspberry Pi
  type: ExternalName
  externalName: 192.168.1.201
